# stablecoin-policy-research

./: .env.example  .gitignore  CRYPTO_COLLATERAL_ANALYSIS.md  DATA_INTERPRETATION_GUIDE.md  DEBUG_REPORT.md  FINAL_STATUS_REPORT.md  Makefile  PEG_STABILITY_ANALYSIS.md  POLICY_QUANTIFICATION_METHODOLOGY.md  POLICY_SOURCES_OVERVIEW.md  QUANTITATIVE_RESEARCH_METHODOLOGY.md  README.md  SENTIMENT_COLLATERAL_ANALYSIS.md  check_deps.py  collateral_dynamics_analysis.py  debug_ingest.py  debug_ingest_simple.py  explore_data.py  minimal_test.py  policy_quantification_guide.py  policy_sentiment_results.csv  pyproject.toml  requirements.txt  run_all_windows.bat  run_simple.bat  sample_policy_events.csv  sentiment_collateral_analysis.py  sentiment_peg_analysis.py  sentiment_volatility_analysis.py  simple_collateral_analysis.py  simple_sentiment_collateral_analysis.py  simple_test.py  test_analysis_config.py  test_api_interface.py  test_api_key.py  test_batch.bat  test_data_fetch.py  test_deepseek_integration.py  test_deepseek_sentiment.py  test_fetcher_simple.py  (+5 more)
.github/workflows/: ci.yml
configs/: config.yaml  model_event_study.yaml
notebooks/: 10_figures.ipynb
scripts/: make_figures.sh
src/: __init__.py
src/data/: __init__.py  fetch_coingecko.py  fetch_fed.py  fetch_macro.py  fetch_onchain.py
src/features/: __init__.py  build_events.py  market_metrics.py
src/features/sentiment/: __init__.py  build_sentiment.py  finbert.py  llm_adapter.py
src/models/: __init__.py  event_study.py  garch.py  var_irf.py
src/pipelines/: __init__.py  run_analysis.py  run_features.py  run_ingest.py
src/utils/: __init__.py  config.py  io.py
stablecoin-policy-research/: pyproject.toml
stablecoin-policy-research/configs/: config.yaml
stablecoin-policy-research/notebooks/: 00_exploration.ipynb
stablecoin-policy-research/scripts/: quickstart.sh
stablecoin-policy-research/src/: __init__.py
stablecoin-policy-research/src/data/: fetch_macro.py  fetch_onchain.py
stablecoin-policy-research/src/features/: __init__.py  build_events.py  market_metrics.py
stablecoin-policy-research/src/features/sentiment/: build_sentiment.py  finbert.py
stablecoin-policy-research/src/pipelines/: __init__.py  run_analysis.py
stablecoin-policy-research/src/utils/: __init__.py
stablecoin-policy-research/tests/: test_event_study.py
tests/: test_event_study.py  test_io.py  test_market_metrics.py
